Fix alignment of header menu items.
Fixes #559
Fixes #552

--- a/core/src/main/web/app/styles/cells.scss
+++ b/core/src/main/web/app/styles/cells.scss
@@ -130,3 +130,7 @@ bk-output-display pre {
 .code-cell-hidden {
     padding-top: 20px;
 }
+
+bk-cell .section > .toggle-menu {
+    margin-top: -4px;
+}
